// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Paragraph /> > should render 1`] = `
<p
  data-astro-cid-ho6gvodc=""
  style=";--bodyFontSize: 1.125rem;--bodyFontWeight: 400;--bodyLineHeight: 1.75rem;--marginBottom: 1rem;--marginTop: 1rem;"
>
   Test content for the paragraph. 
</p>
`;

exports[`<Paragraph /> > should render in grid 1`] = `
<p
  data-astro-cid-ho6gvodc=""
  style="grid-column-start:3;--bodyFontSize: 1.125rem;--bodyFontWeight: 400;--bodyLineHeight: 1.75rem;--marginBottom: 1rem;--marginTop: 1rem;"
>
   Test content for the paragraph. 
</p>
`;
